--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,38 @@
 appdirs==1.4.3
+argcomplete==1.8.2
+base58==0.2.4
+boto3==1.4.4
+botocore==1.5.40
 click==6.7
-Flask==0.12.1
+Django==1.11.1
+docutils==0.13.1
+durationpy==0.4
+future==0.16.0
+futures==3.1.1
+hjson==2.0.2
 itsdangerous==0.24
 Jinja2==2.9.6
+jmespath==0.9.2
+kappa==0.6.0
+lambda-packages==0.15.0
 MarkupSafe==1.0
 numpy==1.12.1
 packaging==16.8
+placebo==0.8.1
 pyparsing==2.2.0
+python-dateutil==2.6.0
+python-slugify==1.2.4
+pytz==2017.2
+PyYAML==3.12
+requests==2.13.0
+s3transfer==0.1.10
 scikit-learn==0.18.1
 scipy==0.19.0
 six==1.10.0
-Werkzeug==0.12.1
+toml==0.9.2
+tqdm==4.11.2
+troposphere==1.9.3
+Unidecode==0.4.20
+Werkzeug==0.12
+wsgi-request-logger==0.4.6
+zappa==0.41.2
