--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ boto3==1.4.4
 botocore==1.5.40
 bz2file==0.98
 click==6.7
+dj-config-url==0.1.1
 Django==1.11.1
 docutils==0.13.1
 durationpy==0.4
@@ -21,6 +22,7 @@ kappa==0.6.0
 Keras==2.0.4
 lambda-packages==0.15.0
 MarkupSafe==1.0
+MySQL-python==1.2.5
 numpy==1.12.1
 packaging==16.8
 placebo==0.8.1
