--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ markovify==0.6.0
 packaging==16.8
 pyparsing==2.2.0
 pytz==2017.2
+requests==2.13.0
 six==1.10.0
+sparkpost==1.3.5
 Unidecode==0.4.20
